
	* bin/po-register: Fix path to 'calc-postats' correctly this time,
	and use the team leaders address at tp.org instead of umontreal.ca.

	* bin/create-mail-aliases: Don't make procmail rules for maintainers
	who have <nomailto> set.

	* registry/registry.sgml: Update URL for xkeyboard-config.

	* registry/registry.sgml: Remove the nano_1_0 maintainance branch.

2007-06-27  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/create-mail-aliases: Comment out the extra alias for
	team-leaders for now; something is going wrong in procmail.

	* webgen/changes.all, webgen/software.all: Textual tweaks.

	* bin/create-mail-aliases: Make team-leaders rule less restrictive.

	* webgen/changes.all, webgen/layout.html.in, webgen/files.all:
	Textual tweaks and additions.

	* webgen/files.all: Further tweaks and margin adjustments.

	* bin/make-package-links.sh: Make the grep command more precise,
	to avoid creating some broken symlinks.

	* lib/localweb.py: Speed up the generation of domain pages by
	a factor of four, by using the symlinks in site/packages, and
	by rejecting non-fitting package names earlier.

	* registry/Makefile: Add back the remote targets, now that I
	understand what they do.

2007-06-26  Benno Schulenberg  <benno@vertaalt.nl>

	* TODO: Update the steps to be taken during the server switch.

	* webgen/html-to-cgi.py, webgen/registry.cgi.in: Delete obsolete files.

	* lib/config.py, webgen/Makefile: Adjust for deletion of CGI stuff.

	* webgen/changes.all, webgen/layout.html.in, webgen/Makefile:
	Add a page that documents the most notable changes made to the scripts
	during the move from Montréal to Vrijschrift.

	* webgen/files.all: Update the descriptions for the current situation.

2007-06-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/generate-static-pages: Add the ability to regenerate just the
	domains or teams given on the command line.

	* bin/generate-static-pages, README: Adjust docstring and manual.
