@@ -26,6 +26,9 @@
 
 	* registry/registry.sgml: Remove the nano_1_0 maintainance branch.
 
+	* lib/localweb.py: Use globbing instead of directory walking when
+	generating a domain page; no need for a packages/ dir any more.
+
 2007-06-27  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* bin/create-mail-aliases: Comment out the extra alias for
